--- a/packages/location/pubspec.yaml
+++ b/packages/location/pubspec.yaml
@@ -26,7 +26,10 @@ dependencies:
   flutter:
     sdk: flutter
   location_platform_interface:
-    path: ../location_platform_interface
+    git:
+      url: https://github.com/ReptileStyle/flutterlocation.git
+      ref: 'singularity'
+      path: packages/location_platform_interface
 #  location_web:
 #    path: location_web
 
